tests/syntax/good/testfile-generics-4.rs


fn f< >(x : usize) -> usize {
    x
}

fn main() {
    let x = f(3);
}