tests/syntax/bad/testfile-generics-2.rs


fn f<T : Add + >(x : T) -> T {
    x
}

fn main() {
    let x = f(3);
}